2012-11-13 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * python/measurement.py: user-set measurement name is now properly used

2012-11-12 Alex Koutsman <alex.koutsman@cern.ch>
	* LinkDef.h : inclusion new ROOT class ChannelStyle for smoother transition to decoupled C++ side, no real change for users
	* ChannelStyle.cxx : new ROOT class ChannelStyle, that defines all plotting options for each channel
	* ChannelStyle.h : new ROOT class ChannelStyle, that defines all plotting options for each channel
	* FitConfig.cxx : moving many functions/functionality to ChannelStyle
	* FitConfig.h : moving many functions/functionality to ChannelStyle
	* Utils.h : adjustments for ChannelStyle
	* Utils.cxx : adjustments for ChannelStyle, addition of flags to GenerateFitAndPlot function to turn on plots at command line
	* python/configManager.py : adjustments for ChannelStyle
	
2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: -D is -d again; using without options gives old
	                         behaviour (before+after)

2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/fitConfig.py: statErrorType property added, plus option to set it
                           progagate down to channels in config 
                           constructorInit uses mkdir_p implementation for new directories
	* scripts/HistFitter.py: now uses argparse; -d is the old draw setting, Alex'
                             --draw is now -D. Other changes: --ty -> -T, fit
                             types via -F (two-letter shorts not allowed) 
	* setup.sh: if-statement to check hostname; lx* will take gcc from afs

2012-11-07 Evgeny Khramov <Evgeniy.Khramov@cern.ch>
	* UpperLimitTable.py: set the workspace name for each individual channel

2012-11-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* setup.sh: source statement for gcc breaks setups when running locally.
				This ought to be made an optional argument!